<resources>
    <string name="app_name">Torchlight</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Common -->
    <string name="common_okay">Okay</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_watch">Watch</string>
    <string name="common_next">Next</string>
    <string name="common_prev">Previous</string>
    <string name="common_expand">Expand</string>
    <string name="common_collapse">Collapse</string>

    <!-- Common main nav -->
    <string name="common_home">home</string>
    <string name="common_my_project">my project</string>
    <string name="common_notification">notice</string>
    <string name="common_my_page">my page</string>

    <!-- Home -->
    <string name="home_search_interested_project">Search interested project</string>

    <!-- Start -->
    <string name="start_title">For you\nwho want to build up\n<b>a project that makes heart-beats</b>.</string>
    <string name="start_demo">Look around without register</string>
    <string name="start_register">Register with your e-mail address</string>
    <string name="start_already_member_q">Do you already have an account?</string>

    <!-- Sign Up -->
    <string name="signup_email">Email address</string>
    <string name="signup_check_duplicated">Check duplicated</string>
    <string name="signup_already_used_email">This email is already signed up</string>
    <string name="signup_send_auth_code">Send auth code</string>
    <string name="signup_fail_to_send_auth_code">Fail to send auth code, please try it again.</string>
    <string name="signup_auth_code">Auth code</string>
    <string name="signup_send_again">Send code again</string>
    <string name="signup_name">Name</string>
    <string name="signup_password">Password</string>
    <string name="signup_password_confirm">Password confirm</string>
    <string name="signup_agree_disclaimer">Agree disclaimer</string>
    <string name="signup_im_agree_disclaimer_msg">Check here to agree terms&amp;condition and private policy.</string>
    <string name="signup_register">Register</string>
    <string name="signup_register_done">Register successfully</string>
    <string name="signup_email_is_invalid">Email address is not valid.</string>

    <!-- Sign In -->
    <string name="signin_find_pw">Find password</string>
    <string name="signin_signin">Sign in</string>
    <string name="signin_email_is_invalid">Email address is not valid.</string>
    <string name="signin_please_fill_all">Please fill both email and password.</string>
    <string name="signin_account_info_wrong">Fail to sign in: Email or password is wrong.</string>

    <!-- Profile -->
    <string name="profile_mandatory">Mandatory profile</string>
    <string name="profile_job">Job</string>
    <string name="profile_occupation">Occupation</string>
    <string name="profile_skills">Skills</string>
    <string name="profile_detail">Detail</string>
    <string name="profile_input">Input</string>
    <string name="profile_optional">Optional profile</string>
    <string name="profile_you_can_skip_by_clicking_nxt_btn">You can skip this by touching next button below the screen.</string>
    <string name="profile_interests">Interests</string>
    <string name="profile_passion">Passion</string>
    <string name="profile_selected_category">Selected Category</string>
    <string name="profile_whole_category">Whole category</string>
    <string name="profile_url">URL</string>
    <string name="profile_grd1">Grade 1</string>
    <string name="profile_grd2">Grade 2</string>
    <string name="profile_grd3">Grade 3</string>
    <string name="profile_create_profile">Create profile</string>


</resources>
