<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_navigation_item_home"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="@string/common_home" />

    <item
        android:id="@+id/bottom_navigation_item_my_project"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="@string/common_my_project" />

    <item
        android:id="@+id/bottom_navigation_item_notification"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="@string/common_notification" />

    <item
        android:id="@+id/bottom_navigation_item_my_page"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="@string/common_my_page" />
</menu>