<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            tools:context=".ui.mypage.EditProfileRequiredInfoFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/profile_mandatory" />

            <!-- Job -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_job"
                android:layout_marginTop="36dp"/>
            <HorizontalScrollView
                android:id="@+id/sv_profile_job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/profile_selected_slot_height"/>

            <!-- Occupation -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:text="@string/profile_occupation"/>
            <HorizontalScrollView
                android:id="@+id/sv_profile_occupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/profile_selected_slot_height"/>

            <!-- skills -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/profile_skills"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_profile_skills"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/profile_selected_slot_height"
                    android:layout_weight="1" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_input"/>
            </LinearLayout>
            <HorizontalScrollView
                android:id="@+id/sv_profile_skills"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/profile_selected_slot_height"/>

            <!-- Details -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/profile_detail" />
            <EditText
                android:id="@+id/tv_profile_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>



        </LinearLayout>
    </ScrollView>

    <!-- Next btn -->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/common_next"/>

    </LinearLayout>
</layout>
