<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <import type="android.view.View" />
        <variable
            name="profile"
            type="com.mashup.torchlight.viewmodel.ProfileViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            tools:context=".ui.mypage.EditProfileMandatoryInfoFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <LinearLayout
                android:id="@+id/layout_mandatory_user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="@{profile.isUserBasicInfoVisible ? View.VISIBLE : View.GONE}">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{profile.data.userName}"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/profile_mandatory" />

            <!-- Job -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_job"
                android:layout_marginTop="36dp"/>
            <com.mashup.torchlight.ui.customview.ItemSelectorView
                android:id="@+id/selector_profile_job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:display_type="text"
                app:multi_selectable="true"
                app:scrollable="false"
                app:removable="true"
                app:radius="8dp"
                app:text_size="12sp"
                app:item_padding="12dp"
                app:item_margin="4dp"
                app:border_color="@android:color/transparent"
                app:selected_color="@color/main_400"
                app:selected_text_color="@color/text_button"
                app:deselected_color="@color/editText_bg"
                app:deselected_text_color="@color/text_primary"
                app:remove_btn_border_color="@android:color/transparent"
                app:remove_btn_bg_color="@color/text_disabled"
                app:remove_btn_x_color="@color/black"/>

            <!-- Occupation -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:text="@string/profile_occupation"/>
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/profile_selected_slot_height">
                <LinearLayout
                    android:id="@+id/layout_profile_occupation"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

            <!-- skills -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/profile_skills"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_profile_skills"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/profile_selected_slot_height"
                    android:layout_weight="1" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_input"/>
            </LinearLayout>
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/profile_selected_slot_height">
                <LinearLayout
                    android:id="@+id/layout_profile_skills"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

            <!-- Details -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/profile_detail" />
            <EditText
                android:id="@+id/tv_profile_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{profile.data.detail}"/>



        </LinearLayout>
    </ScrollView>

    <!-- Next btn -->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/common_next"/>

    </LinearLayout>
</layout>
